# sim2real_EGalahad

./: .gitignore  AGENTS.md  README.md  README_zh.md  pyproject.toml  sync-g1.sh
.github/workflows/: deploy-docs.yml
artifacts/: README.md  lock.v1.json
checkpoints/bfm-zero/: README.md
checkpoints/humanoid-gpt/: README.md  policy.json  policy.yaml
checkpoints/lafan-aa/: policy-kl5hrst6-final.onnx  policy-kl5hrst6-final.yaml
checkpoints/sonic/: README.md
checkpoints/teleopit/: README.md  policy.json  policy.yaml
checkpoints/twist2/: README.md  policy.json  policy.yaml
checkpoints/wxy-wbc/: README.md  policy.json  policy.yaml  source-metadata.json
config/robot/: g1.yaml
config/scene/: g1_29dof_rubberhand.yaml
docs/: README.md  adapting_policies.md  artifacts.md  docusaurus.config.ts  intro.md  motion_stream_disconnects.md  npz_motion_publisher.md  onboard_jetpack5_inference_backends.md  package-lock.json  package.json  policy_yaw_alignment.md  robot_io.md  sidebars.ts  sonic_smpl_input.md  teleop_impl.md  tracking_framework.md  tracking_metrics_diff.md  xrobot_grpc_jetpack5.md
docs/getting-started/: README.md  network-configuration.md  overview.md  root-project.md  teleop-onboard-orin.md  teleop-x86-64.md
docs/tutorials/: motion-recording.md  offline-motion-tracking.md  pico-teleoperation.md  run-external-policies.md
rl_policy/: base_policy.py
rl_policy/observations/: common.py  motion.py
rl_policy/utils/: command_sender.py  motion.py  onnx_module.py  state_processor.py  tensorrt_module.py
scripts/: artifact_tool.py  real_bridge.py  real_bridge_cpp.py  record_motion.py  test_artifact_tool.py  test_g1_runtime_assets.py  test_integrated_sim2sim_assets.py  test_onnx_inference.py  test_tensorrt_inference.py  test_tracker_asset_adapters.py  test_view_motion.py  test_view_raw_motion.py  view_motion.py  view_raw_motion.py
scripts/setup/: setup_g1_hotspot.sh  setup_g1_hotspot_via_laptop.sh  setup_laptop_g1_gateway.sh  setup_xrobot_pybind.sh
scripts/tracking_experiment/: README.md  compute_root_final_error.py  compute_tracking_metrics.py  convert_mjlab_g1_native_to_any4hdmi.py  (+11 more)
tests/: test_command_sender.py  test_hf_motion_paths.py  test_motion_buffer.py  test_qpos_dataset.py
(+87 files in other folders)
